--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "scrollinga",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Keeps scroll at bottom for HTML-based chat-like apps.",
   "main": "dist/scrollinga.js",
   "jsnext:main": "scrollinga.js",
   "scripts": {
     "test": "npm test"
   },
+  "files": [
+    "dist/scrollinga.js"
+  ],
   "keywords": [
     "scroll",
     "chat"
