--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "scripts": {
     "test": "npm test"
   },
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/teambox/scrollinga"
+  },
   "files": [
     "dist/scrollinga.js"
   ],
