add prepublish script and bump to 0.0.6

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "scrollinga",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Keeps scroll at bottom for HTML-based chat-like apps.",
   "main": "dist/scrollinga.js",
   "jsnext:main": "scrollinga.js",
   "scripts": {
+    "prepublish": "webpack",
     "build": "webpack",
     "test": "npm test"
   },
